--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,6 +6,9 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
+permissions:
+  contents: write
+
 name: Java CI with Maven
 
 on:
@@ -29,7 +32,3 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean install --file pom.xml
-
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
